Split audio up more to allow faster metadata updates

--- a/templates/list.html
+++ b/templates/list.html
@@ -125,6 +125,7 @@
                     vlc.playlist.clear();
                     vlc.playlist.add(stream_url);
                     vlc.playlist.play();
+                    return false;
                 });
                 
                 $('#vlc-pause').click(function() {
