--- a/templates/list.html
+++ b/templates/list.html
@@ -16,7 +16,7 @@
             }
             
             body {
-                margin-top: 40px;
+                margin-top: 50px;
             }
             
             table, td, th {
@@ -42,6 +42,7 @@
                 width: 100%;
                 top: 0;
                 left: 0;
+                height: 30px;
             }
             
             h1 {
@@ -124,6 +125,11 @@
             #player-controls div {
                 display: inline;
             }
+            
+            #player-loaded {
+                color: #bb0000;
+                font-weight: bold;
+            }
         </style>
     </head>
     <body>
@@ -140,13 +146,11 @@
                     <input id="vlc-volume" min="0" max="100" value="100" type="range" title="Volume" />
                 </span>
             </div>
-            
-            
         </header>
         
         <div id="info" class="box">
             Welcome to SeriousCast, SiriusXM Internet Radio for normal clients.<br />
-            Streaming requires the VLC plugin for your web browser.<br />
+            Streaming requires the VLC plugin for your web browser. <span id="player-loaded"></span><br />
             Playlist downloads require a SHOUTcast compatible streamer: VLC works well on desktop, XiiaLive works on Android after changing the stream engine to FFmpeg.
             <embed type="application/x-vlc-plugin" pluginspage="http://www.videolan.org" id="vlc" height="0" width="0" style="display: inline; margin: 0; padding: 0;" />
         </div>
@@ -168,7 +172,7 @@
                     <tr>
                         <td>
                             <a class="vlc-stream" data-channel="{{ channel.siriusChannelNo }}" href="#">Stream</a>
-                            |
+                            &bullet;
                             <a href="/playlist/{{ channel.siriusChannelNo }}">Playlist</a>
                         </td>
                         <td>{{ channel.siriusChannelNo }}</td>
@@ -182,8 +186,17 @@
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
         <script>
+            
             $(function() {
                 var vlc = $('#vlc')[0];
+                
+                if (vlc.playlist === undefined) {
+                    $('#player, .vlc-stream').remove();
+                    $('header').css('position', 'static');
+                    $('h1').css('float', 'none');
+                    $('body').css('margin-top', '0');
+                    $('#player-loaded').text('VLC plugin not found, streaming not enabled.');
+                }
                 
                 $('.vlc-stream').click(function() {
                     var stream_url = 'http://' + document.location.hostname + ':' + document.location.port + '/channel/' + $(this).data('channel');
