--- a/templates/list.html
+++ b/templates/list.html
@@ -1,136 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" />
         <title>SeriousCast</title>
-        <style>
-            html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
-        
-            * {
-                box-sizing: border-box;
-            }
-            
-            html {
-                font-family: sans-serif;
-                background-color: #94d9ff;
-            }
-            
-            body {
-                margin-top: 50px;
-            }
-            
-            table, td, th {
-                padding: 2px;
-            }
-            
-            th {
-                font-weight: bold;
-            }
-            
-            table {
-                width: 100%;
-            }
-            
-            h1, h2 {
-                color: #6fa3bf;
-            }
-            
-            header {
-                background-color: #4a6d7f;
-                border-bottom: 1px solid #253640;
-                position: fixed;
-                width: 100%;
-                top: 0;
-                left: 0;
-                height: 30px;
-            }
-            
-            h1 {
-                display: inline-block;
-                font-size: 28px;
-                float: left;
-                min-width: 0;
-            }
-            
-            h2 {
-                font-size: 16px;
-                color: #4a6d7f;
-                font-weight: bold;
-                border-bottom: 1px solid #253640;
-                margin-bottom: 5px;
-            }
-            
-            .box {
-                border: 1px solid #253640;
-                margin: 20px 20px 0;
-                padding: 5px;
-                border-radius: 5px;
-                line-height: 1.4;
-                background-color: #85c3e5;
-            }
-            
-            a, a:visited {
-                color: #253640;
-            }
-            
-            #vlc-channel:before  {
-                content: "Channel: ";
-                font-weight: bold;
-            }
-            
-            #vlc-nowplaying:before {
-                content: "Now Playing: ";
-                font-weight: bold;
-            }
-            
-            #vlc-channel, #vlc-nowplaying {
-                width: 25em;
-                display: inline-block;
-                text-align: left;
-                vertical-align: top;
-                text-overflow: ellipsis;
-                overflow: hidden;
-                white-space: nowrap;
-            }
-            
-            #player {
-                height: 100%;
-                line-height: 29px;
-                padding: 0 10px;
-                text-align: right;
-                color: #6fa3bf;
-                float: right;
-            }
-            
-            input[type=range] {
-                vertical-align: text-top;
-                -webkit-appearance: none;
-                background-color: #94d9ff;
-                width: 150px;
-                height: 20px;
-                margin-top: -1px;
-            }
-
-            input[type="range"]::-webkit-slider-thumb {
-                -webkit-appearance: none;
-                background-color: #6fa3bf;
-                width: 10px;
-                height: 22px;
-            }
-            
-            #player-controls {
-                display: inline-block;
-            }
-            
-            #player-controls div {
-                display: inline;
-            }
-            
-            #player-loaded {
-                color: #bb0000;
-                font-weight: bold;
-            }
-        </style>
+        <link rel="stylesheet" href="/static/styles.css" />
     </head>
     <body>
         <header>
@@ -185,55 +58,6 @@
             </table>
         </div>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-        <script>
-            
-            $(function() {
-                var vlc = $('#vlc')[0];
-                
-                if (vlc.playlist === undefined) {
-                    $('#player, .vlc-stream').remove();
-                    $('header').css('position', 'static');
-                    $('h1').css('float', 'none');
-                    $('body').css('margin-top', '0');
-                    $('#player-loaded').text('VLC plugin not found, streaming not enabled.');
-                }
-                
-                $('.vlc-stream').click(function() {
-                    var stream_url = 'http://' + document.location.hostname + ':' + document.location.port + '/channel/' + $(this).data('channel');
-                    console.log(stream_url);
-                    vlc.playlist.stop();
-                    vlc.playlist.clear();
-                    vlc.playlist.add(stream_url);
-                    vlc.playlist.play();
-                    return false;
-                });
-                
-                $('#vlc-pause').click(function() {
-                    vlc.playlist.togglePause();
-                });
-                
-                $('#vlc-mute').click(function() {
-                    vlc.audio.toggleMute();
-                });
-                
-                $('#vlc-volume').change(function() {
-                    vlc.audio.volume = parseInt($('#vlc-volume').val(), 10);
-                });
-                
-                setInterval(function() {
-                    try {
-                        $('#vlc-channel').text(vlc.mediaDescription.title);
-                        
-                        if (vlc.mediaDescription.nowPlaying != null) {
-                            $('#vlc-nowplaying').text(vlc.mediaDescription.nowPlaying);
-                            $('title').text(vlc.mediaDescription.title + ' :: ' + vlc.mediaDescription.nowPlaying);
-                        } else {
-                            $('#vlc-nowplaying').text("Retrieving info...");
-                        }
-                    } catch (ex) {
-                    }
-                }, 1000);
-            });
-        </script>
+        <script src="/static/player.js"></script>
     </body>
 </html>
