Rewind bugfixes and jump to live button

--- a/templates/list.html
+++ b/templates/list.html
@@ -13,7 +13,7 @@
                 <span id="player-controls">
                     <button id="player-pause" type="button" title="Toggle Pause">P</button>
                     
-                    <button id="player-rewind-status" type="button">Live</button><!--
+                    <button id="player-rewind-status" type="button" title="Jump to Live">Live</button><!--
                     --><input id="player-rewind" min="0" max="300" value="300" type="range" title="Rewind" />
 
                     <button id="player-mute" type="button" title="Toggle Mute">M</button><!--
