--- a/templates/list.html
+++ b/templates/list.html
@@ -55,7 +55,7 @@
                             <a href="/playlist/{{ channel.siriusChannelNo }}">Playlist</a>
                         </td>
                         <td>{{ channel.siriusChannelNo }}</td>
-                        <td>{{ channel.name }}</a></td>
+                        <td>{{ channel.name }}</td>
                         <td>{{ channel.genre }}</td>
                         <td>{{ channel.description }}</td>
                     </tr>
