--- a/static/styles.css
+++ b/static/styles.css
@@ -60,7 +60,7 @@ table {
     margin-bottom: 98px;
 }
 tr {
-    height: 28px;
+    height: 38px;
     line-height: 28px;
 }
 td {
@@ -83,6 +83,12 @@ th {
     font-size: 1.2em;
     color: #2099c8;
 
+}
+.button {
+    width: 40px;
+}
+.desc {
+    font-size: .8em;
 }
 
 
